src/raylib.rs

/* raylib-rs
   raylib.rs - Structs and raw FFI bindings
   Generated in part by bindgen

Copyright (c) 2018 Paul Clement (@deltaphc)

This software is provided "as-is", without any express or implied warranty. In no event will the authors be held liable for any damages arising from the use of this software.

Permission is granted to anyone to use this software for any purpose, including commercial applications, and to alter it and redistribute it freely, subject to the following restrictions:

  1. The origin of this software must not be misrepresented; you must not claim that you wrote the original software. If you use this software in a product, an acknowledgment in the product documentation would be appreciated but is not required.

  2. Altered source versions must be plainly marked as such, and must not be misrepresented as being the original software.

  3. This notice may not be removed or altered from any source distribution.
*/

extern crate libc;

pub use raymath::*;

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Color {
    pub r: u8,
    pub g: u8,
    pub b: u8,
    pub a: u8,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct Rectangle {
    pub x: f32,
    pub y: f32,
    pub width: f32,
    pub height: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Image {
    pub data: *mut libc::c_void,
    pub width: i32,
    pub height: i32,
    pub mipmaps: i32,
    pub format: i32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Texture2D {
    pub id: u32,
    pub width: i32,
    pub height: i32,
    pub mipmaps: i32,
    pub format: i32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct RenderTexture2D {
    pub id: u32,
    pub texture: Texture2D,
    pub depth: Texture2D,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct CharInfo {
    pub value: i32,
    pub rec: Rectangle,
    pub offset_x: i32,
    pub offset_y: i32,
    pub advance_x: i32,
    pub data: *mut u8,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Font {
    pub texture: Texture2D,
    pub base_size: i32,
    pub chars_count: i32,
    pub chars: *mut CharInfo,
}

impl Font {
    /// Returns a new `Font` using provided `CharInfo` data and parameters.
    pub fn from_data(chars: &Vec<CharInfo>, base_size: i32, padding: i32, pack_method: i32) -> Font {
        unsafe {
            let mut f = ::std::mem::zeroed::<Font>();
            f.base_size = base_size;
            f.chars_count = chars.len() as i32;
            
            let data_size = f.chars_count as usize * ::std::mem::size_of::<CharInfo>();
            let ci_arr_ptr = libc::malloc(data_size); // raylib frees this data in UnloadFont
            ::std::ptr::copy(chars.as_ptr(), ci_arr_ptr as *mut CharInfo, chars.len());
            f.chars = ci_arr_ptr as *mut CharInfo;

            let atlas = GenImageFontAtlas(f.chars, f.base_size, f.chars_count, padding, pack_method);
            f.texture = LoadTextureFromImage(atlas);
            UnloadImage(atlas);
            f
        }
    }
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct Camera3D {
    pub position: Vector3,
    pub target: Vector3,
    pub up: Vector3,
    pub fovy: f32,
    pub camtype: i32,
}

pub type Camera = Camera3D;

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct Camera2D {
    pub offset: Vector2,
    pub target: Vector2,
    pub rotation: f32,
    pub zoom: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct BoundingBox {
    pub min: Vector3,
    pub max: Vector3,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Mesh {
    pub vertex_count: i32,
    pub triangle_count: i32,
    pub vertices: *mut f32,
    pub texcoords: *mut f32,
    pub texcoords2: *mut f32,
    pub normals: *mut f32,
    pub tangents: *mut f32,
    pub colors: *mut u8,
    pub indices: *mut u16,
    pub vao_id: u32,
    pub vbo_id: [u32; 7],
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Shader {
    pub id: u32,
    pub locs: [i32; 32],
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct MaterialMap {
    pub texture: Texture2D,
    pub color: Color,
    pub value: f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct Material {
    pub shader: Shader,
    pub maps: [MaterialMap; 12],
    pub params: *mut f32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct Model {
    pub mesh: Mesh,
    pub transform: Matrix,
    pub material: Material,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct Ray {
    pub position: Vector3,
    pub direction: Vector3,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct RayHitInfo {
    pub hit: bool,
    pub distance: f32,
    pub position: Vector3,
    pub normal: Vector3,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Wave {
    pub sample_count: u32,
    pub sample_rate: u32,
    pub sample_size: u32,
    pub channels: u32,
    pub data: *mut libc::c_void,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct Sound {
    pub audio_buffer: *mut libc::c_void,
    pub source: u32,
    pub buffer: u32,
    pub format: i32,
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct MusicData {
    _unused: [u8; 0],
}
pub type Music = *mut MusicData;

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct AudioStream {
    pub sample_rate: u32,
    pub sample_size: u32,
    pub channels: u32,
    pub audio_buffer: *mut libc::c_void,
    pub format: i32,
    pub source: u32,
    pub buffers: [u32; 2],
}

#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq)]
pub struct VrDeviceInfo {
    pub h_resolution: i32,
    pub v_resolution: i32,
    pub h_screen_size: f32,
    pub v_screen_size: f32,
    pub v_screen_center: f32,
    pub eye_to_screen_distance: f32,
    pub lens_separation_distance: f32,
    pub interpupillary_distance: f32,
    pub lens_distortion_values: [f32; 4],
    pub chroma_ab_correction: [f32; 4],
}

extern "C" {
    pub fn InitWindow(
        width: ::std::os::raw::c_int,
        height: ::std::os::raw::c_int,
        title: *const ::std::os::raw::c_char,
    );

    pub fn CloseWindow();

    pub fn IsWindowReady() -> bool;

    pub fn WindowShouldClose() -> bool;

    pub fn IsWindowMinimized() -> bool;

    pub fn ToggleFullscreen();

    pub fn SetWindowIcon(image: Image);

    pub fn SetWindowTitle(title: *const ::std::os::raw::c_char);

    pub fn SetWindowPosition(x: ::std::os::raw::c_int, y: ::std::os::raw::c_int);

    pub fn SetWindowMonitor(monitor: ::std::os::raw::c_int);

    pub fn SetWindowMinSize(width: ::std::os::raw::c_int, height: ::std::os::raw::c_int);

    pub fn SetWindowSize(width: ::std::os::raw::c_int, height: ::std::os::raw::c_int);

    pub fn GetScreenWidth() -> ::std::os::raw::c_int;

    pub fn GetScreenHeight() -> ::std::os::raw::c_int;

    pub fn ShowCursor();

    pub fn HideCursor();

    pub fn IsCursorHidden() -> bool;

    pub fn EnableCursor();

    pub fn DisableCursor();

    pub fn ClearBackground(color: Color);

    pub fn BeginDrawing();

    pub fn EndDrawing();

    pub fn BeginMode2D(camera: Camera2D);

    pub fn EndMode2D();

    pub fn BeginMode3D(camera: Camera3D);

    pub fn EndMode3D();

    pub fn BeginTextureMode(target: RenderTexture2D);

    pub fn EndTextureMode();

    pub fn GetMouseRay(mousePosition: Vector2, camera: Camera3D) -> Ray;

    pub fn GetWorldToScreen(position: Vector3, camera: Camera3D) -> Vector2;

    pub fn GetCameraMatrix(camera: Camera3D) -> Matrix;

    pub fn SetTargetFPS(fps: ::std::os::raw::c_int);

    pub fn GetFPS() -> ::std::os::raw::c_int;

    pub fn GetFrameTime() -> f32;

    pub fn GetTime() -> f64;

    pub fn ColorToInt(color: Color) -> ::std::os::raw::c_int;

    pub fn ColorNormalize(color: Color) -> Vector4;

    pub fn ColorToHSV(color: Color) -> Vector3;

    pub fn GetColor(hexValue: ::std::os::raw::c_int) -> Color;

    pub fn Fade(color: Color, alpha: f32) -> Color;

    pub fn ShowLogo();

    pub fn SetConfigFlags(flags: ::std::os::raw::c_uchar);

    pub fn SetTraceLog(types: ::std::os::raw::c_uchar);

    // pub fn TraceLog(logType: ::std::os::raw::c_int, text: *const ::std::os::raw::c_char, ...);

    pub fn TakeScreenshot(fileName: *const ::std::os::raw::c_char);

    pub fn GetRandomValue(
        min: ::std::os::raw::c_int,
        max: ::std::os::raw::c_int,
    ) -> ::std::os::raw::c_int;

    pub fn IsFileExtension(
        fileName: *const ::std::os::raw::c_char,
        ext: *const ::std::os::raw::c_char,
    ) -> bool;

    pub fn GetExtension(fileName: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;

    pub fn GetFileName(filePath: *const ::std::os::raw::c_char) -> *const ::std::os::raw::c_char;

    pub fn GetDirectoryPath(
        fileName: *const ::std::os::raw::c_char,
    ) -> *const ::std::os::raw::c_char;

    pub fn GetWorkingDirectory() -> *const ::std::os::raw::c_char;

    pub fn ChangeDirectory(dir: *const ::std::os::raw::c_char) -> bool;

    pub fn IsFileDropped() -> bool;

    pub fn GetDroppedFiles(count: *mut ::std::os::raw::c_int) -> *mut *mut ::std::os::raw::c_char;

    pub fn ClearDroppedFiles();

    pub fn StorageSaveValue(position: ::std::os::raw::c_int, value: ::std::os::raw::c_int);

    pub fn StorageLoadValue(position: ::std::os::raw::c_int) -> ::std::os::raw::c_int;

    pub fn IsKeyPressed(key: ::std::os::raw::c_int) -> bool;

    pub fn IsKeyDown(key: ::std::os::raw::c_int) -> bool;

    pub fn IsKeyReleased(key: ::std::os::raw::c_int) -> bool;

    pub fn IsKeyUp(key: ::std::os::raw::c_int) -> bool;

    pub fn GetKeyPressed() -> ::std::os::raw::c_int;

    pub fn SetExitKey(key: ::std::os::raw::c_int);

    pub fn IsGamepadAvailable(gamepad: ::std::os::raw::c_int) -> bool;

    pub fn IsGamepadName(
        gamepad: ::std::os::raw::c_int,
        name: *const ::std::os::raw::c_char,
    ) -> bool;

    pub fn GetGamepadName(gamepad: ::std::os::raw::c_int) -> *const ::std::os::raw::c_char;

    pub fn IsGamepadButtonPressed(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;

    pub fn IsGamepadButtonDown(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;

    pub fn IsGamepadButtonReleased(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;

    pub fn IsGamepadButtonUp(
        gamepad: ::std::os::raw::c_int,
        button: ::std::os::raw::c_int,
    ) -> bool;

    pub fn GetGamepadButtonPressed() -> ::std::os::raw::c_int;

    pub fn GetGamepadAxisCount(gamepad: ::std::os::raw::c_int) -> ::std::os::raw::c_int;

    pub fn GetGamepadAxisMovement(
        gamepad: ::std::os::raw::c_int,
        axis: ::std::os::raw::c_int,
    ) -> f32;

    pub fn IsMouseButtonPressed(button: ::std::os::raw::c_int) -> bool;

    pub fn IsMouseButtonDown(button: ::std::os::raw::c_int) -> bool;

    pub fn IsMouseButtonReleased(button: ::std::os::raw::c_int) -> bool;

    pub fn IsMouseButtonUp(button: ::std::os::raw::c_int) -> bool;

    pub fn GetMouseX() -> ::std::os::raw::c_int;

    pub fn GetMouseY() -> ::std::os::raw::c_int;

    pub fn GetMousePosition() -> Vector2;

    pub fn SetMousePosition(position: Vector2);

    pub fn SetMouseScale(scale: f32);

    pub fn GetMouseWheelMove() -> ::std::os::raw::c_int;

    pub fn GetTouchX() -> ::std::os::raw::c_int;

    pub fn GetTouchY() -> ::std::os::raw::c_int;

    pub fn GetTouchPosition(index: ::std::os::raw::c_int) -> Vector2;

    pub fn SetGesturesEnabled(gestureFlags: ::std::os::raw::c_uint);

    pub fn IsGestureDetected(gesture: ::std::os::raw::c_int) -> bool;

    pub fn GetGestureDetected() -> ::std::os::raw::c_int;

    pub fn GetTouchPointsCount() -> ::std::os::raw::c_int;

    pub fn GetGestureHoldDuration() -> f32;
